[package]
name = "okansi"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "An ok library for creating ANSI terminal styles"
repository = "https://github.com/HappySunChild/okansi"

[dependencies]

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "*"
features = [
	"consoleapi",
	"errhandlingapi",
	"fileapi",
	"handleapi",
	"processenv",
]
